[package]
name = "ditherable-leds"
version = "0.1.0"
authors = ["eV <ev@7pr.xyz>"]
edition = "2018"

[dependencies]
smart-leds-trait = { git = "https://github.com/evq/smart-leds-trait", branch = "wip" }
generic-array = "0.11.1"
gamma-lut-macro = { path = "../gamma-lut-macro" }
proc-macro-hack = "0.5"
